# DocuMind

./: .gitignore  README.md  docker-compose.yml  package.json
apps/ai-service/: Dockerfile  pyproject.toml
apps/api-server/: Dockerfile  pyproject.toml
apps/api-server/src/: __init__.py  app.py  database.py  settings.py
apps/api-server/src/clients/: blob_storage.py
apps/api-server/src/constants/: blob_storage.py
apps/api-server/src/migrations/: env.py
apps/api-server/src/migrations/versions/: 1e701e105f4f_change_most_document_fields_to_nullable.py  935f06e2fd2c_init.py  c2e329721277_create_tables.py
apps/api-server/src/models/: base.py  document.py  user.py
apps/api-server/src/routes/: blob_storage.py  insight.py
apps/api-server/src/services/: blob_storage.py  message_queue.py
apps/api-server/src/types/: blob_storage.py  insight.py
apps/frontend/: Dockerfile
apps/worker/: Dockerfile  go.mod  main.go
apps/worker/services/: message.go  worker.go
apps/worker/utils/: config.go  error.go
