[project]
name = "ai-service"
version = "0.1.0"
description = "AI document knowledge generation service"
requires-python=">3.11,<3.14"
dependencies = []

# TBD

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
