[project]
name = "api-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">3.11,<3.14"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""
